# Multi-Agent-A2A

./: .env  .env.example  .gitignore  pyproject.toml  run_all.py  test.py
client/: __main__.py  a2a_tools_.py  client_agent.py
crewai_question_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
langgraph_latex_agent/: __main__.py  agent.py  agent_executor.py
shared/: utilis.py
